# macro-scope

./: .gitignore  .npmignore  .npmrc  .vscodeignore  MACRO_SCOPE_REQUIREMENTS.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
scripts/: build-server.mjs  build-server.ps1  parser-smoke-test.mjs  with-rust-env.mjs  with-rust-env.ps1
server/: Cargo.toml
server/src/: main.rs  parser.rs
src/: extension.ts
