[package]
name = "macro-scope-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tower-lsp = "0.20"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
strip = true
lto = "thin"
